update swag host
